# bazel-sample

./: .gitignore  README.md  WORKSPACE  bazel-bin  bazel-grpc_test  bazel-out  bazel-testlogs
proto/: BUILD.bazel  hello.proto
src/: BUILD.bazel  client.cc  server.cc
tests/: BUILD.bazel  all_test.cc  ssl_test.cc
utils/: BUILD.bazel  basic.cc  basic.h  ssl_test.cc  ssl_test.h  ssl_util.cc  ssl_util.h  utils.cc  utils.h
